daemon: Use setsid() to become a process leader when daemonizing

* Fixes corner cases where people try to use gnome-keyring-daemon
   from the console.

https://bugzilla.gnome.org/show_bug.cgi?id=679892